# etlegacy-libs

./: .gitignore  .project  CMake-MS-static-patch.txt  CMakeLists.txt  patcher.bat  test
curl/: CMakeLists.txt  Makefile
curl-windows/: libcurl.lib
curl/lib/: CMakeLists.txt  Makefile.vc10  Makefile.vc8  Makefile.vc9  libcurl.vcproj  vc6libcurl.dsp
curl/src/: Makefile.vc10  Makefile.vc8  Makefile.vc9
curl/tests/data/: test714  test715
freetype/: CMakeLists.txt
freetype/PaxHeaders.18661/: configure  docs  objs  src
freetype/builds/PaxHeaders.18661/: amiga  ansi  atari  link_dos.mk  mac  newline  symbian  unix  vms  wince
freetype/builds/ansi/PaxHeaders.18661/: ansi-def.mk  ansi.mk
freetype/builds/atari/PaxHeaders.18661/: ATARI.H  FNames.SIC  FREETYPE.PRJ  README.TXT  deflinejoiner.awk  gen-purec-patch.sh
freetype/builds/beos/PaxHeaders.18661/: beos-def.mk  beos.mk
freetype/builds/compiler/PaxHeaders.18661/: ansi-cc.mk  bcc-dev.mk  bcc.mk  emx.mk  gcc.mk  intelc.mk  unix-lcc.mk  visualage.mk  visualc.mk  watcom.mk  win-lcc.mk
freetype/builds/dos/PaxHeaders.18661/: dos-def.mk  dos-emx.mk  dos-gcc.mk  dos-wat.mk
freetype/builds/mac/PaxHeaders.18661/: FreeType.m68k_cfm.make.txt  FreeType.m68k_far.make.txt  FreeType.ppc_carbon.make.txt  FreeType.ppc_classic.make.txt  README  ascii2mpw.py  ftlib.prj.xml  ftmac.c
freetype/builds/os2/PaxHeaders.18661/: os2-def.mk  os2-dev.mk  os2-gcc.mk
freetype/builds/symbian/PaxHeaders.18661/: freetype.mmp
freetype/builds/unix/PaxHeaders.18661/: config.guess  config.sub  configure  install-sh  ltmain.sh  mkinstalldirs  unix-cc.in  unix-def.in  unix-lcc.mk  unix.mk
freetype/builds/vms/PaxHeaders.18661/: ftsystem.c
freetype/builds/wince/PaxHeaders.18661/: vc2005-ce  vc2008-ce
freetype/builds/windows/PaxHeaders.18661/: vc2005  vc2008  vc2010  visualc  visualce  w32-bcc.mk  w32-bccd.mk  w32-dev.mk  w32-gcc.mk  w32-icc.mk  w32-intl.mk  w32-lcc.mk  w32-mingw32.mk  w32-vcc.mk  w32-wat.mk  win32-def.mk
freetype/docs/PaxHeaders.18661/: FTL.TXT  GPLv2.TXT  INSTALL  INSTALL.CROSS  INSTALL.GNU  INSTALL.MAC  INSTALL.UNIX  INSTALL.VMS  LICENSE.TXT  MAKEPP  PROBLEMS  TODO  formats.txt  raster.txt  reference
freetype/docs/reference/PaxHeaders.18661/: README  ft2-auto_hinter.html  ft2-base_interface.html  ft2-basic_types.html  ft2-bdf_fonts.html  ft2-bitmap_handling.html  ft2-bzip2.html  ft2-cache_subsystem.html  ft2-cff_driver.html  ft2-cid_fonts.html  ft2-computations.html  ft2-font_formats.html  ft2-gasp_table.html  ft2-glyph_management.html  ft2-glyph_stroker.html  ft2-glyph_variants.html  ft2-gx_validation.html  ft2-gzip.html  ft2-header_file_macros.html  ft2-incremental.html  ft2-index.html  ft2-lcd_filtering.html  ft2-list_processing.html  ft2-lzw.html  ft2-mac_specific.html  ft2-module_management.html  ft2-multiple_masters.html  ft2-ot_validation.html  ft2-outline_processing.html  ft2-pfr_fonts.html  ft2-quick_advance.html  ft2-raster.html  ft2-sfnt_names.html  ft2-sizes_management.html  ft2-system_interface.html  ft2-toc.html  ft2-truetype_engine.html  ft2-truetype_tables.html  ft2-tt_driver.html  ft2-type1_tables.html  (+3 more)
freetype/objs/PaxHeaders.18661/: README
freetype/src/PaxHeaders.18661/: gxvalid  otvalid  tools
freetype/src/autofit/PaxHeaders.18661/: Jamfile  afangles.c  afangles.h  afblue.c  afblue.cin  afblue.h  afblue.hin  afcjk.c  afcjk.h  afdummy.c  afdummy.h  aferrors.h  afglobal.c  afglobal.h  afhints.c  afhints.h  afindic.c  afindic.h  aflatin.c  aflatin.h  aflatin2.c  aflatin2.h  afloader.c  afloader.h  afmodule.c  afmodule.h  afpic.c  afpic.h  afscript.h  aftypes.h  afwarp.c  afwarp.h  afwrtsys.h  autofit.c
freetype/src/base/PaxHeaders.18661/: Jamfile  basepic.c  basepic.h  ftadvanc.c  ftapi.c  ftbase.c  ftbase.h  ftbbox.c  ftbdf.c  ftbitmap.c  ftcalc.c  ftcid.c  ftdbgmem.c  ftfstype.c  ftgasp.c  ftgloadr.c  ftglyph.c  ftgxval.c  ftlcdfil.c  ftmac.c  ftmm.c  ftotval.c  ftoutln.c  ftpatent.c  ftpfr.c  ftpic.c  ftrfork.c  ftsnames.c  ftstream.c  ftstroke.c  ftsynth.c  ftsystem.c  fttrigon.c  fttype1.c  ftutil.c  ftwinfnt.c  ftxf86.c  md5.c  md5.h
freetype/src/bdf/PaxHeaders.18661/: Jamfile  README  bdf.c  bdf.h  bdfdrivr.c  bdfdrivr.h  bdferror.h  bdflib.c
freetype/src/bzip2/PaxHeaders.18661/: Jamfile  ftbzip2.c
freetype/src/cache/PaxHeaders.18661/: ftcache.c  ftcbasic.c  ftccache.c  ftccache.h  ftccback.h  ftccmap.c  ftcerror.h  ftcglyph.c  ftcglyph.h  ftcimage.c  ftcimage.h  ftcmanag.c  ftcmanag.h  ftcmru.c  ftcmru.h  ftcsbits.c  ftcsbits.h
freetype/src/cff/PaxHeaders.18661/: Jamfile  cf2arrst.c  cf2arrst.h  cf2blues.c  cf2blues.h  cf2error.c  cf2error.h  cf2fixed.h  cf2font.c  cf2font.h  cf2ft.c  cf2ft.h  cf2glue.h  cf2hints.h  cf2intrp.c  cf2intrp.h  cf2read.c  cf2read.h  cf2stack.c  cf2stack.h  cf2types.h  cff.c  cffcmap.c  cffcmap.h  cffdrivr.c  cffdrivr.h  cfferrs.h  cffgload.c  cffgload.h  cffload.c  (+9 more)
freetype/src/sfnt/: ttcolr.c  ttcpal.c
glew/: CMakeLists.txt
jansson/: CMakeLists.txt
jansson/cmake/: jansson_private_config.h.cmake
jpeg/: makefile.vc
jpeg-windows/: jpeg.lib
jpegturbo/: CMakeLists.txt  Makefile.in  aclocal.m4  config.h.cmake  configure  jconfig.h.cmake  jconfigint.h.cmake
libpng/scripts/: genout.cmake.in
lua/: Makefile  README
lua-windows/: README.txt
lua/src/: Makefile  luaconf.h
luasql/: CMakeLists.txt  README  config
ogg/: CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
ogg-windows/: libogg_static.lib  libvorbis_static.lib  libvorbisfile_static.lib
ogg/doc/: Makefile.in
ogg/doc/libogg/: Makefile.in
ogg/include/: Makefile.in
ogg/include/ogg/: Makefile.in  os_types.h
ogg/src/: Makefile.in
openal/: CMakeLists.txt
openal/Alc/: bformatdec.h
openal/native-tools/: CMakeLists.txt
patches/: WolfSSL.patch  sdl-2.26.4.c89.patch
sdl2/: CMakeLists.txt
sqlite3/: CMakeLists.txt  readme.txt
theora/win32/VS2008/: UpgradeLog.htm  libogg.props  libtheora_static.sdf  libtheora_static.sln  libvorbis.props
tinygettext/: iconv.hpp
tinygettext/.svn/: all-wcprops  dir-prop-base  entries
vorbis/: CMakeLists.txt
(+273 files in other folders)
